# handler/response.go
@@ -38,6 +38,11 @@ type DeleteOpeningResponse struct {
 	Data    schemas.OpeningResponse `json:"data"`
 }
 
+type ShowOpeningResponse struct {
+	Message string                  `json:"message"`
+	Data    schemas.OpeningResponse `json:"data"`
+}
+
 type UpdateOpeningResponse struct {
 	Message string                  `json:"message"`
 	Data    schemas.OpeningResponse `json:"data"`
