# handler/showOpening.go
@@ -7,6 +7,19 @@ import (
 	"net/http"
 )
 
+// @BasePath /api/v1
+
+// ShowOpeningHandler handles the show opening request
+// @Summary Show Opening
+// @Description Show a job opening
+// @Tags Openings
+// @Accept json
+// @Produce json
+// @Param id query string true "Opening identification"
+// @Success 200 {object} ShowOpeningResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 404 {object} ErrorResponse
+// @Router /opening [get]
 func ShowOpeningHandler(ctx *gin.Context) {
 	id := ctx.Query("id")
 	if id == "" {
